Updating the models + code cleanup
