# demo/views.py
@@ -6,5 +6,5 @@ import arapp.models as models
 # Create your views here.
 # Index that provides a description of the API
 def appliances(request):
-    appliancesp = models.Software.objects.all()
+    appliancesp = models.Appliance.objects.all()
     return render(request, "appliances.html", {"appliances": appliancesp})
